# backend/docs/swagger.json
@@ -405,6 +405,62 @@
                 }
             }
         },
+        "/finances/month": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get all transactions of month",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Finances"
+                ],
+                "summary": "Get all transactions of month",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Access token",
+                        "name": "x-access-token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "month",
+                        "name": "month",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/finances.ResponseData"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/helper.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/helper.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/finances/transaction": {
             "get": {
                 "security": [
@@ -484,7 +540,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/finances.CreateTransactionRequest"
+                            "$ref": "#/definitions/finances.CreateTransactionRuleRequest"
                         }
                     },
                     {
@@ -677,7 +733,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/finances.ResponseCategory"
+                            "$ref": "#/definitions/finances.ResponseData"
                         }
                     },
                     "400": {
@@ -1062,7 +1118,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/task.ResponseTask"
+                            "$ref": "#/definitions/tasks.ResponseTask"
                         }
                     },
                     "400": {
@@ -1118,7 +1174,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/task.ResponseTask"
+                            "$ref": "#/definitions/tasks.ResponseTask"
                         }
                     },
                     "400": {
@@ -1166,7 +1222,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/task.UpdateTaskRequest"
+                            "$ref": "#/definitions/tasks.UpdateTaskRequest"
                         }
                     },
                     {
@@ -1181,7 +1237,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/task.ResponseTasks"
+                            "$ref": "#/definitions/tasks.ResponseTasks"
                         }
                     },
                     "400": {
@@ -1222,7 +1278,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/task.CreateTaskRequest"
+                            "$ref": "#/definitions/tasks.CreateTaskRequest"
                         }
                     },
                     {
@@ -1237,7 +1293,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/task.ResponseTask"
+                            "$ref": "#/definitions/tasks.ResponseTask"
                         }
                     },
                     "400": {
@@ -1297,7 +1353,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/task.ResponseTask"
+                            "$ref": "#/definitions/tasks.ResponseTask"
                         }
                     },
                     "400": {
@@ -1352,7 +1408,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/task.ResponseTasks"
+                            "$ref": "#/definitions/tasks.ResponseTasks"
                         }
                     },
                     "400": {
@@ -1408,7 +1464,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/task.ResponseTaskMap"
+                            "$ref": "#/definitions/tasks.ResponseTaskMap"
                         }
                     },
                     "400": {
@@ -2220,13 +2276,13 @@
                 "Unique"
             ]
         },
-        "finances.CreateTransactionRequest": {
+        "finances.CreateTransactionRuleRequest": {
             "type": "object",
             "properties": {
                 "category_id": {
                     "type": "integer"
                 },
-                "date": {
+                "end_date": {
                     "type": "string"
                 },
                 "frequency": {
@@ -2234,6 +2290,9 @@
                 },
                 "income": {
                     "type": "boolean"
+                },
+                "start_date": {
+                    "type": "string"
                 },
                 "title": {
                     "type": "string"
@@ -2246,22 +2305,17 @@
                 }
             }
         },
-        "finances.ResponseCategory": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/finances.ResponseData"
-                },
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
         "finances.ResponseData": {
             "type": "object",
             "properties": {
                 "category": {
                     "type": "string"
+                },
+                "color": {
+                    "type": "string"
+                },
+                "confirmed": {
+                    "type": "boolean"
                 },
                 "createAt": {
                     "type": "string"
@@ -2270,6 +2324,9 @@
                     "type": "string"
                 },
                 "deletedAt": {
+                    "type": "string"
+                },
+                "end_date": {
                     "type": "string"
                 },
                 "frequency": {
@@ -2281,11 +2338,17 @@
                 "income": {
                     "type": "boolean"
                 },
+                "start_date": {
+                    "type": "string"
+                },
                 "title": {
                     "type": "string"
                 },
                 "updateAt": {
                     "type": "string"
+                },
+                "value": {
+                    "type": "number"
                 }
             }
         },
@@ -2408,7 +2471,7 @@
                 }
             }
         },
-        "task.CreateTaskRequest": {
+        "tasks.CreateTaskRequest": {
             "type": "object",
             "properties": {
                 "category_id": {
@@ -2440,7 +2503,7 @@
                 }
             }
         },
-        "task.ResponseData": {
+        "tasks.ResponseData": {
             "type": "object",
             "properties": {
                 "category": {
@@ -2487,7 +2550,7 @@
                 }
             }
         },
-        "task.ResponseDataWeekTask": {
+        "tasks.ResponseDataWeekTask": {
             "type": "object",
             "properties": {
                 "category": {
@@ -2519,41 +2582,41 @@
                 }
             }
         },
-        "task.ResponseDateTasks": {
+        "tasks.ResponseDateTasks": {
             "type": "object",
             "properties": {
                 "tasks": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/task.ResponseDataWeekTask"
+                        "$ref": "#/definitions/tasks.ResponseDataWeekTask"
                     }
                 }
             }
         },
-        "task.ResponseTask": {
+        "tasks.ResponseTask": {
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/task.ResponseData"
+                    "$ref": "#/definitions/tasks.ResponseData"
                 },
                 "message": {
                     "type": "string"
                 }
             }
         },
-        "task.ResponseTaskMap": {
+        "tasks.ResponseTaskMap": {
             "type": "object",
             "additionalProperties": {
-                "$ref": "#/definitions/task.ResponseDateTasks"
+                "$ref": "#/definitions/tasks.ResponseDateTasks"
             }
         },
-        "task.ResponseTasks": {
+        "tasks.ResponseTasks": {
             "type": "object",
             "properties": {
                 "data": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/task.ResponseData"
+                        "$ref": "#/definitions/tasks.ResponseData"
                     }
                 },
                 "message": {
@@ -2561,7 +2624,7 @@
                 }
             }
         },
-        "task.UpdateTaskRequest": {
+        "tasks.UpdateTaskRequest": {
             "type": "object",
             "properties": {
                 "category_id": {
@@ -2585,6 +2648,9 @@
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                },
+                "photo": {
                     "type": "string"
                 }
             }
@@ -2622,6 +2688,9 @@
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                },
+                "photo": {
                     "type": "string"
                 },
                 "updateAt": {
@@ -2669,6 +2738,9 @@
             "type": "object",
             "properties": {
                 "name": {
+                    "type": "string"
+                },
+                "photo": {
                     "type": "string"
                 }
             }
